Closed
Bug 456262
Opened 17 years ago
Closed 17 years ago
Attribute nodes don't preserve wrappers
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smaug, Assigned: smaug)
Details
Attachments
(2 files)
|
276 bytes,
text/html
|
Details | |
|
3.83 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
Patch coming.
Note, this isn't a regression from ff2.
| Assignee | ||
Comment 1•17 years ago
|
||
Just for the sake of consistency.
The test tries to make sure that this doesn't cause memory leaks.
nsDOMAttribute does already traverse and unlink wrappers.
Assignee: nobody → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #339654 -
Flags: superreview?(jst)
Attachment #339654 -
Flags: review?(jst)
Comment 2•17 years ago
|
||
Peter, FYI, this probably conflicts with your node wrapper caching changes.
Updated•17 years ago
|
Attachment #339654 -
Flags: superreview?(jst)
Attachment #339654 -
Flags: superreview+
Attachment #339654 -
Flags: review?(jst)
Attachment #339654 -
Flags: review+
| Assignee | ||
Updated•17 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•