 Bug 456262 -  Attribute nodes don't preserve wrappers, r+sr=jst